// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React Code Generator > Accessibility Attributes > should generate aria-label attribute 1`] = `
"import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button className="close-btn" aria-label="Close dialog">
          X
        </Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Accessibility Attributes > should generate multiple aria attributes 1`] = `
"import { Input } from "@/components/ui/input";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Input
          aria-required="true"
          aria-invalid="false"
          aria-describedby="error-msg"
        />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Accessibility Attributes > should generate role attribute 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <div aria-label="Main navigation" role="navigation">
          Nav content
        </div>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Basic Components > should generate Button component 1`] = `
"import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button variant="primary">Click me</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Basic Components > should generate Card component 1`] = `
"import { Card, CardContent } from "@/components/ui/card";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Card>
          <CardContent>Card content</CardContent>
        </Card>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Basic Components > should generate Input component 1`] = `
"import { Input } from "@/components/ui/input";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Input id="username" placeholder="Enter username" />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > CSS Variables > should generate CSS variables from style block 1`] = `
"import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <style
        dangerouslySetInnerHTML={{
          __html: \`:root {
  --color-primary: #0E5EF7;
  --spacing-card: 1.5rem;
  --radius-button: 8px;
}\`,
        }}
      />
      <div className="container mx-auto p-6">
        <Button>Button</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Canvas and SVG > should generate Canvas element 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <canvas id="myCanvas" width="800" height="600"></canvas>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Canvas and SVG > should generate SVG element 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <svg className="icon" viewBox="0 0 100 100">
          SVG content
        </svg>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Complete Integration > should generate complete page with all features 1`] = `
"import CustomHeader from "./components/Header";
import { Button } from "@/components/ui/button";
import { useState } from "react";
import useSWR from "swr";

const fetcher = (url: string) => fetch(url).then((res) => res.json());

export default function Page() {
  const [count, setCount] = useState(0);

  const {
    data: users,
    error: usersError,
    isLoading: usersLoading,
  } = useSWR("/api/users", fetcher);

  return (
    <>
      <style
        dangerouslySetInnerHTML={{
          __html: \`:root {
  --color-primary: #0E5EF7;
}\`,
        }}
      />
      <div className="container mx-auto p-6">
        <CustomHeader />
        <p>Count: {count}</p>
        <Button className="bg-[var(--color-primary)]">Increment</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate multi-node conditional with Fragment 1`] = `
"import { Button } from "@/components/ui/button";
import { Badge } from "@/components/ui/badge";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isLoggedIn && (
          <>
            <Button>Logout</Button>
            <Badge>Premium</Badge>
          </>
        )}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate single-node conditional without Fragment 1`] = `
"import { Badge } from "@/components/ui/badge";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isActive && <Badge>Active</Badge>}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Conditional Rendering > should generate ternary with single nodes without Fragment 1`] = `
"import { Badge } from "@/components/ui/badge";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {isPremium ? (
          <Badge variant="success">Premium</Badge>
        ) : (
          <Badge variant="default">Free</Badge>
        )}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Data Block > should generate SWR data fetching 1`] = `
"import useSWR from "swr";

const fetcher = (url: string) => fetch(url).then((res) => res.json());

export default function Page() {
  const {
    data: users,
    error: usersError,
    isLoading: usersLoading,
  } = useSWR("/api/users", fetcher);

  return (
    <>
      <div className="container mx-auto p-6">
        <p>Users loaded</p>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Event Handlers > should generate onChange event handler for inputs 1`] = `
"import { Input } from "@/components/ui/input";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Input value={inputValue} onChange={handleChange} />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Event Handlers > should generate onClick event handler 1`] = `
"import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button className="btn-primary" onClick={handleClick}>
          Click me
        </Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate Div with Tailwind classes 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <div className="container mx-auto p-4">Hello World</div>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate Form element 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <form className="space-y-4" action="/submit">
          Form content
        </form>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate Image (Img) with src and alt 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <img className="w-32 h-32" src="/logo.png" alt="Logo" />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate Link (A) with href 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <a className="text-blue-500 underline" href="https://example.com">
          Click here
        </a>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate heading tags 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <h1 className="text-3xl font-bold">Main Title</h1>
        <h2 className="text-2xl">Subtitle</h2>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate list elements 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <ul className="list-disc">
          <li>Item 1</li>
          <li>Item 2</li>
        </ul>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > HTML Elements > should generate semantic HTML elements 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <header className="bg-gray-100">Header</header>
        <main className="container">
          <section>Content</section>
        </main>
        <footer className="mt-8">Footer</footer>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Import Statements > should handle imported components 1`] = `
"import Counter from "./components/Counter";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Counter initial={10} />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Import Statements > should handle multiple imports 1`] = `
"import { Button, Input } from "./components";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button>Click</Button>
        <Input placeholder="Type here" />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Loop Rendering > should generate loop with React.Fragment 1`] = `
"import { Card, CardContent } from "@/components/ui/card";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {users.map((user) => (
          <React.Fragment key={user.id || Math.random()}>
            <Card>
              <CardContent>User</CardContent>
            </Card>
          </React.Fragment>
        ))}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Media Elements > should generate Audio element with Source children 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <audio controls="true">
          <source src="/audio.mp3" type="audio/mpeg" />
        </audio>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Media Elements > should generate Video element with controls 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <video className="w-full" src="/video.mp4" controls="true"></video>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Multiple Components > should generate form with multiple inputs 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
import { Input } from "@/components/ui/input";
import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Card>
          <CardContent>User Registration</CardContent>
        </Card>
        <Input id="name" placeholder="Name" />
        <Input id="email" placeholder="Email" type="email" />
        <Button variant="primary">Submit</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Nested Control Flow > should handle loop inside conditional 1`] = `
"import { Badge } from "@/components/ui/badge";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {hasItems &&
          items.map((item) => (
            <React.Fragment key={item.id || Math.random()}>
              <Badge>Item</Badge>
            </React.Fragment>
          ))}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Nested Control Flow > should handle nested conditional in loop 1`] = `
"import { Card, CardContent } from "@/components/ui/card";
import { Badge } from "@/components/ui/badge";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        {items.map((item) => (
          <React.Fragment key={item.id || Math.random()}>
            <Card>
              <CardContent>Item</CardContent>
            </Card>
            {item.isActive && <Badge>Active</Badge>}
          </React.Fragment>
        ))}
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > State Block > should generate useState hooks 1`] = `
"import { useState } from "react";

export default function Page() {
  const [count, setCount] = useState(0);
  const [isOpen, setIsOpen] = useState(false);
  const [message, setMessage] = useState("");

  return (
    <>
      <div className="container mx-auto p-6">
        <p>Count: {count}</p>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Table Elements > should generate complete table structure 1`] = `
"export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <table className="w-full">
          <thead>
            <tr>
              <th>Name</th>
              <th>Age</th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>John</td>
              <td>30</td>
            </tr>
          </tbody>
        </table>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Tailwind CSS Support > should convert class to className 1`] = `
"import { Button } from "@/components/ui/button";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Button className="bg-blue-500 text-white px-4 py-2">Click me</Button>
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Variable References > should render variable references in props 1`] = `
"import { Input } from "@/components/ui/input";

export default function Page() {
  return (
    <>
      <div className="container mx-auto p-6">
        <Input value={username} />
      </div>
    </>
  );
}
"
`;

exports[`React Code Generator > Variable References > should render variable references in text 1`] = `
"import { useState } from "react";

export default function Page() {
  const [count, setCount] = useState(0);

  return (
    <>
      <div className="container mx-auto p-6">
        <p>Count: {count}</p>
      </div>
    </>
  );
}
"
`;
